WIP welcome alignment bug

--- a/css/styles.css
+++ b/css/styles.css
@@ -15,13 +15,13 @@ img {
 }
 
 .welcome {
-  text-align: center;
+  text-align: right;
   width: 500px;
-  margin: 0;
   color: rgb(56, 2, 2);
   font-family: cursive;
   font-size: large;
-  margin: 75px;
+  margin-left: 75px;
+  float: left;
 }
 
 .wrapper .sidebar {
